--- a/src/index.html
+++ b/src/index.html
@@ -36,7 +36,7 @@
 
     <!-- В этот список рендери разметку меню -->
     <ul class="menu js-menu"></ul>
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.11/handlebars.min.js"></script>
     <script src="index.js" type="module"></script>
   </body>
 </html>
